# visual-runtime-cohort

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  justfile
core/: CMakeLists.txt
core/include/engine/: api.h
core/include/visual_runtime/: api.h
core/shaders/: basic.metal
core/shaders/metal/: basic.metal
core/shaders/vulkan/: basic.vert.glsl
core/src/: engine.cpp  renderer.cpp  renderer.h  visual_runtime.cpp
core/src/backend/metal/: CMakeLists.txt  renderer_metal.cpp
core/src/backend/vulkan/: CMakeLists.txt  renderer_vulkan.cpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_frame_resources.cpp  vulkan_frame_resources.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.cpp  vulkan_utils.hpp
docs/: architecture-diagram.html
docs/adr/: 0001-compile-time-renderer-backends.md  0002-moltenvk-is-a-macos-smoke-test-path.md  0003-two-handle-surface-descriptor.md
host/: dynamic_library.h  engine_api.h  engine_module.h  engine_runtime.h  hot_reload.h  runtime.h  visual_runtime_api.h  visual_runtime_module.h
host/cli/: CMakeLists.txt  hot_reload.h  main.cpp
host/glfw-minimal/: CMakeLists.txt  README.md  main.cpp
host/macos/: .gitignore  Project.swift
host/macos/Host.xcodeproj/: project.pbxproj
host/macos/Host.xcodeproj/xcshareddata/xcschemes/: Host.xcscheme
host/macos/Host.xcworkspace/: contents.xcworkspacedata
host/macos/Host.xcworkspace/xcshareddata/xcschemes/: Generate Project.xcscheme  Host-Workspace.xcscheme
host/macos/Host/Sources/: ContentView.swift  Engine.cpp  Engine.h  EngineHost.cpp  EngineHost.h  EngineManager.swift  EngineSession.swift  Host-Bridging-Header.h  HostApp.swift  HostRuntime.cpp  HostRuntime.h  MetalView.swift  RuntimeBridge.cpp  RuntimeBridge.h  RuntimeManager.swift  VisualRuntimeHost.cpp  VisualRuntimeHost.h  VisualRuntimeSession.swift
host/macos/Host/Tests/: HostTests.swift
host/macos/Tuist/: Package.swift
